GMail send API able to send a email to Orange and receive SMS

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ Jinja2==2.9.6
 MarkupSafe==1.0
 oauth2client==4.1.0
 oauthlib==2.0.2
+psutil==5.2.2
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+python-gnupg==0.4.0
 requests==2.17.3
 requests-oauth2==0.2.0
 requests-oauthlib==0.8.0
