--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,20 @@ MarkupSafe==1.0
 oauth2client==4.1.0
 oauthlib==2.0.2
 psutil==5.2.2
+py==1.4.34
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+PyJWT==1.5.0
+PySocks==1.6.7
+pytest==3.1.3
 python-gnupg==0.4.0
+pytz==2017.2
 requests==2.17.3
 requests-oauth2==0.2.0
 requests-oauthlib==0.8.0
 rsa==3.4.2
 six==1.10.0
+twilio==6.4.2
 uritemplate==3.0.0
 urllib3==1.21.1
 Werkzeug==0.12.2
